# neurad

./: .gitignore  CMakeLists.txt  README.md  main.cpp
bench/: CMakeLists.txt  README.md  bench_neurad.cpp  bench_tf.py  bench_torch.py
bench/neurust/: Cargo.toml
bench/neurust/src/: main.rs
core/: neurad.h
test/: CMakeLists.txt  test_neurad.cpp
